Bug 507839 - Button and shortcut for new transaction not working in reconciliation
Summary: Button and shortcut for new transaction not working in reconciliation
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-04 07:12 UTC by Thomas Baumgart
Modified: 2025-08-04 08:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2025-08-04 07:12:58 UTC
SUMMARY
The button to create a new transaction and the Ctrl-Ins shortcut are not working when the ledger is in reconciliation mode.

STEPS TO REPRODUCE
1. Start reconciliation of an account until the ledger is shown with the transactions to be reconciled.
2. Press the New transaction button or press Ctrl-Ins

OBSERVED RESULT
Nothing happens

EXPECTED RESULT
The transaction editor for a new transaction shall be opened.

ADDITIONAL INFORMATION
Clicking on the empty transaction at the bottom of the ledger starts the process even in reconciliation mode.
Comment 1 Thomas Baumgart 2025-08-04 07:34:10 UTC
Git commit 9ec5195e4273b9b3a553c01f6d6ad184d27dffed by Thomas Baumgart.
Committed on 04/08/2025 at 07:33.
Pushed by tbaumgart into branch 'master'.

Fix some actions during reconciliation

During reconciliation some actions (e.g. create new transaction) did not work properly. This change fixes the problem.
FIXED-IN: 5.2.1

M  +1    -1    kmymoney/views/reconciliationledgerviewpage.cpp

https://invent.kde.org/office/kmymoney/-/commit/9ec5195e4273b9b3a553c01f6d6ad184d27dffed
Comment 2 Thomas Baumgart 2025-08-04 08:34:11 UTC
Git commit c3d3f7e5d36d76b4e456de6a88e1ac048dd62792 by Thomas Baumgart.
Committed on 04/08/2025 at 07:34.
Pushed by tbaumgart into branch '5.2'.

Fix some actions during reconciliation

During reconciliation some actions (e.g. create new transaction) did not work properly. This change fixes the problem.
FIXED-IN: 5.2.1
(cherry picked from commit 9ec5195e4273b9b3a553c01f6d6ad184d27dffed)

M  +1    -1    kmymoney/views/reconciliationledgerviewpage.cpp

https://invent.kde.org/office/kmymoney/-/commit/c3d3f7e5d36d76b4e456de6a88e1ac048dd62792