Fix some actions during reconciliation

During reconciliation some actions (e.g. create new transaction) did not work properly. This change fixes the problem.

BUG: 507839
FIXED-IN: 5.2.1
(cherry picked from commit 9ec5195e4273b9b3a553c01f6d6ad184d27dffed)